@@ -1,3 +1,3 @@
-EBUILD ankh-1.0.ebuild 1966 SHA256 2fc1db10d0d931930b8dcee297e7e5967cb55f7ce510ef50f2764dff2998036e SHA512 92feab4cdc973eb594156bd682a095110af8b33b5312b366d55d8f6d4dd9220aa0110fc33735692bbb61400c25fe4458923ae163ca06cbb718fa098acf68bfd0 WHIRLPOOL 8765c5bd5ee1c87d0eaed9ab36990816515affa0c0d548447996f75f295d3334ef6fe83920413c2d5a8f87de3b890b4d417bea529c6b5ce751b4ff9894828caa
-MISC ChangeLog 82 SHA256 12ed3543adc88564630b15553233b47b2bf04f4acc8f97eeb5c5befa2c16c75b SHA512 bf31a0cd9c7f4c2b560ef6cd2174e927933d1004c8fab2089e1d0d8c8d76f26f449f9babd33b72176038868259296cd4dda9db0b9cb175274e98fff888290703 WHIRLPOOL f7606de1e805cc293c25b9538e2fd7433ed4cd076bf7e047d7583e4e3886de1a365fe6b1e75bbcbd80f8d4da4a74ec3259d9914462a80ac75e9537dca5c9e52f
+EBUILD ankh-1.0.ebuild 1934 SHA256 e4d1035959a08bf128b3543b80c64ba9e83f9a6c39aaa91a2351ba76bad08465 SHA512 2f8bdbe684cc0f07ede8229628d615fec41885c938f62c29bab84b82facb1bbfc24efe95110bebd27ccb45aaba780109a0bbf90419e54d2657a68477d75d5d30 WHIRLPOOL d9a9bf3c6eeb184ad5a347f2b892ad8bda50a4f05d2eb70da2df6c9d85958e1034c5e22b1bbbb925dd1baec8a52c1e58833d369fdd7883b21036cc2eb0132979
+MISC ChangeLog 189 SHA256 55e545c9256a3d6f477972e28fbeedd98fb9d21b62540241ed5a85c4758ecf2c SHA512 bfdf37b496e51ed0d0f3117dbac657c66f8a2ee70c8656b40f611c7dcfd8943b8065b21faf2c69875c72a81c6dbbb481f55215667bcb3c3bd8847681224b9c25 WHIRLPOOL e2d72bd006be6ca6a84bfad1eb59d35e10eb4542957b8e4660b43bc273be4ca6053c7a7f2c3266363b7fa2a31e622adaa5548132b58af4dbfba3434b2dd0cb0f
 MISC metadata.xml 234 SHA256 f35b97f99a26d73cc441e1d93bfe25aaa4e9f7f6d90c8d05a74f7b7bc5b68472 SHA512 59d8156b3ca3e99c40d5a2a32de7edf2eb53279b2424998862589d6bad77617d23fc852afec0a92f8ac5bb54a88ebc504cc0641029c1936412e90ab03dfdd447 WHIRLPOOL 935a1401910a42f888c991e443a49275ea8b87976c5aa977f670053d97d18754231749749bc92d37d4b5f45ecf65914480942a11b5827b6c08fb24313a428431
