@@ -1,3 +1,5 @@
+  01 Sep 2016; Manuel Friedli <manuel@fritteli.ch> ankh-1.0.ebuild:
+  games-rpg/ankh:  updated to EAPI="6"
+
   07 Jun 2016; Manuel Friedli <manuel@fritteli.ch> +ChangeLog:
   Added ChangeLog
-
